# PradyOS-S

./: .env.example  .gitignore  CLAUDE.md  Makefile  PROVING_GROUND.md  Procfile  README.md  docker-compose.yml  fly.toml  pyproject.toml  render.yaml  requirements.txt
deploy/: Dockerfile  docker-compose.yml  secrets.env.example
docs/: AGI_ASI_ROADMAP.md  ARCHITECTURE.md  BENCHMARKS.md  BOOT_HARDENING.md  BUILD_PIPELINE.md  CODEMAP.md  COGNITIVE_LAYER.md  COMMANDS.md  DEV_MODE.md  ENTERPRISE_MODE.md  HIDDEN_CLI_DOCTRINE.md  LOCAL_MODE.md  MONETIZATION.md  PHASE_1_PROPOSAL.md  REPO_METADATA.md  TESTING.md
examples/: hello_skill.py  swarm_bugfix.py  swarm_on_repo.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
pradyos/: __init__.py  campaign_titan_bridge.py  cli.py  memory_feedback.py  proving_ground_ci.py  service.py  sovereign_web.py  warden_phase4.py
scripts/: benchmarks.py  bootstrap.sh  build_iso.ps1  build_iso.sh  build_manifest.py  demo_codemap.py  demo_cognitive_layer.py  demo_enterprise_deployment.py  demo_personal_assistant.py  export_codemap_mermaid.py  harden_boot.sh  inspect_install.sh  install_to_disk.sh  iso_chroot_setup.sh  patch_web_phase100.py  patch_web_phase101.py  patch_web_phase103.py  patch_web_phase104.py  patch_web_phase105.py  patch_web_phase107.py  patch_web_phase109.py  patch_web_phase110.py  patch_web_phase111.py  patch_web_phase113.py  patch_web_phase114.py  patch_web_phase121.py  patch_web_phase124.py  patch_web_phase128.py  patch_web_phase131.py  patch_web_phase132.py  patch_web_phase134.py  patch_web_phase135.py  patch_web_phase139.py  patch_web_phase140.py  patch_web_phase141.py  patch_web_phase144.py  patch_web_phase145.py  patch_web_phase148.py  patch_web_phase149.py  patch_web_phase150.py  (+56 more)
tests/: conftest.py  test_admission_bridge.py  test_advisor.py  test_aegis.py  test_aegis_cli.py  test_aether_shell.py  test_aether_shell_web.py  test_aggregate_root.py  test_ams_web.py  (+422 more)
(+558 files in other folders)
