[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pradyos"
version = "0.0.1"
description = "PRADY OS Sovereign Edition. Autonomous AI operating system."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary Sovereign Constitution" }
authors = [{ name = "Sovereign", email = "prady@pradyos.local" }]

dependencies = [
    "psutil>=5.9",
    "rich>=13.7",
    "textual>=0.58",
    "aiohttp>=3.9",
    "pydantic>=2.5",
    "orjson>=3.9",
    "anyio>=4.2",
    "click>=8.1",
    "httpx>=0.27",
    "chromadb>=0.5",
    "fastapi>=0.100",
    "starlette>=0.27",
]

[project.optional-dependencies]
gpu = [
    "nvidia-ml-py>=12.535",
]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.8",
    "redis>=5.0",
    "fakeredis>=2.0",
]

[project.scripts]
pradyos = "pradyos.service:main"
pradyos-throne = "pradyos.aurora_throne.app:main"
pradyos-titan = "pradyos.titan_ops.daemon:main"
pradyos-warden = "pradyos.warden_grid.monitor:main"
pradyos-imperium = "pradyos.imperium.kernel:main"
pradyos-oracle = "pradyos.oracle.daemon:main"
pradyos-admission = "pradyos.oracle.admission_bridge:main"
pradyos-campaign = "pradyos.campaign.engine:main"
pradyos-sovereign = "pradyos.sovereign.cli:main"
pradyos-scheduler = "pradyos.campaign.scheduler:main"
pradyos-web = "pradyos.sovereign_web:main"
pradyos-repl = "pradyos.sovereign.repl:main"

[tool.setuptools.packages.find]
include = ["pradyos*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "live: marks tests that require live external services (Ollama, network)",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
get-version = "py310"
